update:按restful风格修改接口定义

--- a/mojiayi-springcloud-in-action/member-service/src/main/resources/application.yml
+++ b/mojiayi-springcloud-in-action/member-service/src/main/resources/application.yml
@@ -1,7 +1,7 @@
 server:
   port: 8088
   servlet:
-    context-path: /api
+    context-path: /api/member-serivce
 spring:
   profiles:
     active: dev
