--- a/mojiayi-springcloud-in-action/commission-service/src/main/resources/application.yml
+++ b/mojiayi-springcloud-in-action/commission-service/src/main/resources/application.yml
@@ -1,7 +1,7 @@
 server:
   port: 8089
   servlet:
-    context-path: /api
+    context-path: /api/commission-service
 spring:
   profiles:
     active: dev
