update:member-service的地址写错了

--- a/mojiayi-springcloud-in-action/member-service/src/main/resources/application.yml
+++ b/mojiayi-springcloud-in-action/member-service/src/main/resources/application.yml
@@ -1,7 +1,7 @@
 server:
   port: 8088
   servlet:
-    context-path: /api/member-serivce
+    context-path: /api/member-service
 spring:
   profiles:
     active: dev
