--- a/mojiayi-springcloud-in-action/member-service/src/main/resources/application.yml
+++ b/mojiayi-springcloud-in-action/member-service/src/main/resources/application.yml
@@ -7,3 +7,10 @@ spring:
     active: dev
   application:
     name: member-service
+  cloud:
+    sentinel:
+      transport:
+        dashboard: localhost:8748
+feign:
+  sentinel:
+    enabled: true
