--- a/mojiayi-springcloud-in-action/entrance-gate/pom.xml
+++ b/mojiayi-springcloud-in-action/entrance-gate/pom.xml
@@ -12,7 +12,7 @@
     <artifactId>entrance-gate</artifactId>
 
     <name>entrance-gate</name>
-    <url>http://www.example.com</url>
+    <url>http://www.mojiayi.com</url>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
