--- a/mojiayi-algorithm-in-action/pom.xml
+++ b/mojiayi-algorithm-in-action/pom.xml
@@ -13,7 +13,7 @@
 
     <name>mojiayi-algorithm-in-action</name>
     <!-- FIXME change it to the project's website -->
-    <url>http://www.example.com</url>
+    <url>http://www.mojiayi.com</url>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
