--- a/mojiayi-springcloud-in-action/pom.xml
+++ b/mojiayi-springcloud-in-action/pom.xml
@@ -2,6 +2,11 @@
 
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <parent>
+        <groupId>com.mojiayi.action</groupId>
+        <artifactId>mojiayi-in-action</artifactId>
+        <version>1.0.0</version>
+    </parent>
     <modelVersion>4.0.0</modelVersion>
     <packaging>pom</packaging>
     <modules>
@@ -10,17 +15,16 @@
         <module>commission-service</module>
         <module>service-input-output</module>
     </modules>
-    <parent>
-        <groupId>com.mojiayi.action</groupId>
-        <artifactId>mojiayi-in-action</artifactId>
-        <version>1.0.0</version>
-    </parent>
+
+    <properties>
+
+    </properties>
 
     <artifactId>mojiayi-springcloud-in-action</artifactId>
     <version>1.0.0</version>
 
     <name>mojiayi-springcloud-in-action</name>
-    <url>http://www.example.com</url>
+    <url>http://www.mojiayi.com</url>
 
     <dependencies>
 
