--- a/mojiayi-springcloud-in-action/service-input-output/pom.xml
+++ b/mojiayi-springcloud-in-action/service-input-output/pom.xml
@@ -12,7 +12,7 @@
     <artifactId>service-input-output</artifactId>
 
     <name>service-input-output</name>
-    <url>http://www.example.com</url>
+    <url>http://www.mojiayi.com</url>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -21,6 +21,11 @@
     </properties>
 
     <dependencies>
+        <dependency>
+            <groupId>io.swagger</groupId>
+            <artifactId>swagger-annotations</artifactId>
+        </dependency>
+
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
