--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
     <modules>
         <module>mojiayi-springcloud-in-action</module>
         <module>mojiayi-algorithm-in-action</module>
+        <module>mojiayi-netty-in-action</module>
         <module>common-tools</module>
     </modules>
 
@@ -25,6 +26,9 @@
         <maven.compiler.target>8</maven.compiler.target>
         <spring-cloud-alibaba.version>2021.1</spring-cloud-alibaba.version>
         <spring-cloud.version>2020.0.1</spring-cloud.version>
+        <mybatis-spring-boot-starter.version>2.2.1</mybatis-spring-boot-starter.version>
+        <mysql.version>8.0.27</mysql.version>
+        <netty.version>4.1.73.Final</netty.version>
         <knife4j.version>3.0.3</knife4j.version>
         <swagger.version>1.5.22</swagger.version>
         <hutool.version>5.7.17</hutool.version>
@@ -49,6 +53,12 @@
                 <version>${spring-cloud.version}</version>
                 <type>pom</type>
                 <scope>import</scope>
+            </dependency>
+
+            <dependency>
+                <groupId>io.netty</groupId>
+                <artifactId>netty-all</artifactId>
+                <version>${netty.version}</version>
             </dependency>
 
             <dependency>
