--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
         <module>mojiayi-algorithm-in-action</module>
         <module>mojiayi-netty-in-action</module>
         <module>common-tools</module>
+        <module>mojiayi-design-pattern-in-action</module>
     </modules>
 
     <properties>
@@ -35,6 +36,7 @@
         <guava.version>31.0.1-jre</guava.version>
         <gson.version>2.8.9</gson.version>
         <lombok.version>1.18.22</lombok.version>
+        <spring-test.version>5.3.15</spring-test.version>
         <junit.version>4.13.2</junit.version>
     </properties>
 
@@ -101,6 +103,13 @@
                 <groupId>org.projectlombok</groupId>
                 <artifactId>lombok</artifactId>
                 <version>${lombok.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.springframework</groupId>
+                <artifactId>spring-test</artifactId>
+                <version>${spring-test.version}</version>
+                <scope>test</scope>
             </dependency>
 
             <dependency>
