update:添加练习java基础的子模块，同时修改其他子模块的说明文字

--- a/mojiayi-design-pattern-in-action/pom.xml
+++ b/mojiayi-design-pattern-in-action/pom.xml
@@ -10,6 +10,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>mojiayi-design-pattern-in-action</artifactId>
+    <description>练习服务器开发工作中有实际用途的设计模式</description>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
