--- a/mojiayi-algorithm-in-action/pom.xml
+++ b/mojiayi-algorithm-in-action/pom.xml
@@ -12,8 +12,8 @@
     <artifactId>mojiayi-algorithm-in-action</artifactId>
 
     <name>mojiayi-algorithm-in-action</name>
-    <!-- FIXME change it to the project's website -->
     <url>http://www.mojiayi.com</url>
+    <description>练习服务器开发工作中有实际用途的排序、调度、限流和统计算法</description>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -25,30 +25,25 @@
         <dependency>
             <groupId>com.google.code.gson</groupId>
             <artifactId>gson</artifactId>
-            <version>2.8.9</version>
         </dependency>
 
         <dependency>
             <groupId>cn.hutool</groupId>
             <artifactId>hutool-all</artifactId>
-            <version>5.7.17</version>
         </dependency>
 
         <dependency>
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
-            <version>31.0.1-jre</version>
         </dependency>
 
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
-            <version>1.18.22</version>
         </dependency>
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>4.13.2</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
