--- a/mojiayi-java-basis-in-action/pom.xml
+++ b/mojiayi-java-basis-in-action/pom.xml
@@ -9,34 +9,19 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>common-tools</artifactId>
+    <artifactId>mojiayi-java-basis-in-action</artifactId>
 
-    <name>common-tools</name>
-    <url>http://www.mojiayi.com</url>
-    <description>在多个练习模块中可共用的公共类</description>
+    <name>mojiayi-java-basis-in-action</name>
+    <url>http://www.example.com</url>
+    <description>使用比较高级的java基础特性</description>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.compiler.source>1.8</maven.compiler.source>
-        <maven.compiler.target>1.8</maven.compiler.target>
+        <maven.compiler.source>8</maven.compiler.source>
+        <maven.compiler.target>8</maven.compiler.target>
     </properties>
 
     <dependencies>
-        <dependency>
-            <groupId>io.swagger</groupId>
-            <artifactId>swagger-annotations</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>com.google.guava</groupId>
-            <artifactId>guava</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>cn.hutool</groupId>
-            <artifactId>hutool-all</artifactId>
-        </dependency>
-
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
