--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
         <module>common-tools</module>
         <module>mojiayi-design-pattern-in-action</module>
         <module>mojiayi-java-basis-in-action</module>
+        <module>mojiayi-dubbo-in-action</module>
     </modules>
 
     <properties>
