--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,8 @@
         <maven.compiler.target>8</maven.compiler.target>
         <spring-cloud-alibaba.version>2021.1</spring-cloud-alibaba.version>
         <spring-cloud.version>2020.0.1</spring-cloud.version>
+        <dubbo-spring-boot-starter.version>3.0.5</dubbo-spring-boot-starter.version>
+        <dubbo.version>2.7.15</dubbo.version>
         <mybatis-plus.version>3.5.1</mybatis-plus.version>
         <mybatis-spring-boot-starter.version>2.2.1</mybatis-spring-boot-starter.version>
         <mysql.version>8.0.27</mysql.version>
@@ -38,6 +40,8 @@
         <netty.version>4.1.73.Final</netty.version>
         <spring-kafka.version>2.7.0</spring-kafka.version>
         <scala-lang.version>2.13.7</scala-lang.version>
+        <jjwt.version>0.9.1</jjwt.version>
+        <spring-security.version>1.1.1.RELEASE</spring-security.version>
         <knife4j.version>3.0.3</knife4j.version>
         <swagger.version>1.5.22</swagger.version>
         <hutool.version>5.7.17</hutool.version>
@@ -64,6 +68,19 @@
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
+
+            <dependency>
+                <groupId>org.apache.dubbo</groupId>
+                <artifactId>dubbo-spring-boot-starter</artifactId>
+                <version>${dubbo-spring-boot-starter.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.apache.dubbo</groupId>
+                <artifactId>dubbo</artifactId>
+                <version>${dubbo.version}</version>
+            </dependency>
+
 
             <dependency>
                 <groupId>io.netty</groupId>
@@ -119,6 +136,18 @@
                 <artifactId>scala-library</artifactId>
                 <version>${scala-lang.version}</version>
                 <scope>test</scope>
+            </dependency>
+
+            <dependency>
+                <groupId>org.springframework.security</groupId>
+                <artifactId>spring-security-jwt</artifactId>
+                <version>${spring-security.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>io.jsonwebtoken</groupId>
+                <artifactId>jjwt</artifactId>
+                <version>${jjwt.version}</version>
             </dependency>
 
             <dependency>
