--- a/mojiayi-springcloud-in-action/auth-service/pom.xml
+++ b/mojiayi-springcloud-in-action/auth-service/pom.xml
@@ -59,7 +59,7 @@
 
         <dependency>
             <groupId>org.springframework.security</groupId>
-            <artifactId>spring-security-jwt</artifactId>
+            <artifactId>spring-security-web</artifactId>
         </dependency>
 
         <dependency>
