--- a/mojiayi-springcloud-in-action/pom.xml
+++ b/mojiayi-springcloud-in-action/pom.xml
@@ -10,6 +10,7 @@
     <modelVersion>4.0.0</modelVersion>
     <packaging>pom</packaging>
     <modules>
+        <module>auth-service</module>
         <module>member-service</module>
         <module>entrance-gate</module>
         <module>commission-service</module>
