feat:保存计算太阳系各行星物体重量的功能

--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
         <module>mojiayi-java-basis-in-action</module>
         <module>mojiayi-dubbo-in-action</module>
         <module>mojiayi-kafka-in-action</module>
+        <module>calculate-gravity</module>
     </modules>
 
     <properties>
