--- a/mojiayi-dynamic-data-permission-in-action/src/main/resources/application.yml
+++ b/mojiayi-dynamic-data-permission-in-action/src/main/resources/application.yml
@@ -2,9 +2,9 @@ spring:
   datasource:
     db:
       driver-class-name: com.mysql.cj.jdbc.Driver
-      url: jdbc:mysql://host:port/schema?useUnicode=true&characterEncoding=utf8&allowMultiQueries=true&useSSL=false
-      username: username
-      password: pwd
+      url: jdbc:mysql://localhost:3306/sys?useUnicode=true&characterEncoding=utf8&allowMultiQueries=true&useSSL=false&allowPublicKeyRetrieval=true
+      username: root
+      password: V-YN]18uPKcf4NR1B?sa
     druid:
       keep-Alive: true
       initial-size: 5
