update:打印执行过程中的sql

--- a/mojiayi-dynamic-data-permission-in-action/src/main/resources/application.yml
+++ b/mojiayi-dynamic-data-permission-in-action/src/main/resources/application.yml
@@ -45,3 +45,6 @@ spring:
         use-global-data-source-stat: true
         web-stat-filter:
           enabled: false
+logging:
+  level:
+    com.mojiayi.action.dynamic.data.permission.dao: debug
