update:在服务间做一致性负载和传递request header的代码，抽取到单独的模块

--- a/mojiayi-springcloud-in-action/pom.xml
+++ b/mojiayi-springcloud-in-action/pom.xml
@@ -17,6 +17,7 @@
         <module>member-service</module>
         <module>commission-api</module>
         <module>commission-service</module>
+        <module>mojiayi-cloud-tool</module>
     </modules>
 
     <properties>
