--- a/mojiayi-springcloud-in-action/member-service/pom.xml
+++ b/mojiayi-springcloud-in-action/member-service/pom.xml
@@ -28,6 +28,12 @@
         </dependency>
 
         <dependency>
+            <groupId>com.mojiayi.action</groupId>
+            <artifactId>mojiayi-dynamic-data-permission</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+        </dependency>
+
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
             <exclusions>
