--- a/mojiayi-springcloud-in-action/mojiayi-gateway/pom.xml
+++ b/mojiayi-springcloud-in-action/mojiayi-gateway/pom.xml
@@ -22,6 +22,12 @@
 
     <dependencies>
         <dependency>
+            <groupId>com.mojiayi.action</groupId>
+            <artifactId>mojiayi-cloud-tool</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+        </dependency>
+
+        <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-gateway</artifactId>
         </dependency>
