--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,7 @@
         <module>mojiayi-mybatis-in-action</module>
         <module>mojiayi-kafka-in-action</module>
         <module>calculate-gravity</module>
+        <module>mojiayi-dynamic-data-permission</module>
     </modules>
 
     <properties>
@@ -47,6 +48,7 @@
         <knife4j.version>3.0.3</knife4j.version>
         <swagger.version>1.5.22</swagger.version>
         <hutool.version>5.7.17</hutool.version>
+        <commons-beanutils.version>1.9.4</commons-beanutils.version>
         <guava.version>31.0.1-jre</guava.version>
         <gson.version>2.8.9</gson.version>
         <lombok.version>1.18.22</lombok.version>
@@ -186,6 +188,12 @@
                 <groupId>com.google.guava</groupId>
                 <artifactId>guava</artifactId>
                 <version>${guava.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>commons-beanutils</groupId>
+                <artifactId>commons-beanutils</artifactId>
+                <version>${commons-beanutils.version}</version>
             </dependency>
 
             <dependency>
