update:更正要打印sql的包目录

--- a/mojiayi-mybatis-in-action/src/main/resources/application.yml
+++ b/mojiayi-mybatis-in-action/src/main/resources/application.yml
@@ -47,4 +47,4 @@ spring:
           enabled: false
 logging:
   level:
-    com.mojiayi.action.dynamic.data.permission.dao: debug
+    com.mojiayi.action.mybatis.dao: debug
