update:在网关层获取用户基本信息，通过header传递到下游服务

--- a/mojiayi-springcloud-in-action/mojiayi-gateway/pom.xml
+++ b/mojiayi-springcloud-in-action/mojiayi-gateway/pom.xml
@@ -23,6 +23,12 @@
     <dependencies>
         <dependency>
             <groupId>com.mojiayi.action</groupId>
+            <artifactId>member-api</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.mojiayi.action</groupId>
             <artifactId>mojiayi-cloud-tool</artifactId>
             <version>1.0.0-SNAPSHOT</version>
         </dependency>
