update:完善MyBatis自动填充信息的功能

--- a/mojiayi-mybatis-in-action/src/main/resources/application.yml
+++ b/mojiayi-mybatis-in-action/src/main/resources/application.yml
@@ -47,7 +47,7 @@ spring:
           enabled: false
 logging:
   level:
-    com.mojiayi.action.mybatis.dao: info
+    com.mojiayi.action.mybatis.dao: debug
 
 mybatis-plus:
   mapper-locations: classpath*:mapper/*.xml
