--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.4.2</version>
+        <version>2.5.5</version>
     </parent>
 
     <groupId>com.mojiayi.action</groupId>
@@ -30,8 +30,9 @@
     <properties>
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
+        <spring-boot.version>2.5.5</spring-boot.version>
         <spring-cloud-alibaba.version>2021.1</spring-cloud-alibaba.version>
-        <spring-cloud.version>2020.0.1</spring-cloud.version>
+        <spring-cloud.version>2020.0.5</spring-cloud.version>
         <dubbo-spring-boot-starter.version>3.0.5</dubbo-spring-boot-starter.version>
         <dubbo.version>2.7.15</dubbo.version>
         <mybatis-plus.version>3.5.1</mybatis-plus.version>
@@ -44,10 +45,12 @@
         <scala-lang.version>2.13.7</scala-lang.version>
         <jjwt.version>0.9.1</jjwt.version>
         <spring-security.version>5.6.2</spring-security.version>
+        <shiro-spring.version>1.6.0</shiro-spring.version>
         <version.org.apache.log4j>2.16.0</version.org.apache.log4j>
         <knife4j.version>3.0.3</knife4j.version>
         <swagger.version>1.5.22</swagger.version>
         <hutool.version>5.7.17</hutool.version>
+        <easy-web.version>4.1.3</easy-web.version>
         <commons-beanutils.version>1.9.4</commons-beanutils.version>
         <guava.version>31.0.1-jre</guava.version>
         <gson.version>2.8.9</gson.version>
@@ -149,6 +152,12 @@
             </dependency>
 
             <dependency>
+                <groupId>org.apache.shiro</groupId>
+                <artifactId>shiro-spring-boot-starter</artifactId>
+                <version>${shiro-spring.version}</version>
+            </dependency>
+
+            <dependency>
                 <groupId>org.springframework.security</groupId>
                 <artifactId>spring-security-web</artifactId>
                 <version>${spring-security.version}</version>
@@ -158,6 +167,12 @@
                 <groupId>io.jsonwebtoken</groupId>
                 <artifactId>jjwt</artifactId>
                 <version>${jjwt.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>cn.afterturn</groupId>
+                <artifactId>easypoi-web</artifactId>
+                <version>${easy-web.version}</version>
             </dependency>
 
             <dependency>
